[project]
    name = "harness"
    version = "0.1.0"
    description = "CDP Browser Harness Web Portal"
    requires-python = ">=3.11"
    dependencies = [
        "fastapi>=0.111.0",
        "uvicorn[standard]>=0.30.0",
        "python-multipart>=0.0.9",
        "itsdangerous>=2.2.0",
        "jinja2>=3.1.4",
        "websockets>=12.0",
        "httpx>=0.27.0",
        "python-dotenv>=1.0.1",
        "starlette>=0.37.2",
    ]

    [tool.uv]
    package = false
    